objects/Scorecard_Set__c.object
<CustomObject>
    <fields>
        <fullName>Maximum_Financed_Amount__c</fullName>
        <label>Maximum Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Financed_Amount__c</fullName>
        <label>Minimum Financed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Scorecard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard</label>
        <referenceTo>genesis__Scorecard__c</referenceTo>
        <relationshipLabel>Scorecard Sets</relationshipLabel>
        <relationshipName>Scorecard_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Scorecard Set</label>
    <nameField>
        <label>Scorecard Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scorecard Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>